--- a/MyAppAspNet/Views/Shared/_Template.cshtml
+++ b/MyAppAspNet/Views/Shared/_Template.cshtml
@@ -85,7 +85,7 @@
         <div class="content-wrapper">
             <div class="content-header">
                 <div class="container-fluid">
-                    <h4 class="m-0 text-dark"><strong>First Page</strong></h4>
+                    <h4 class="m-0 text-dark"><strong>@ViewBag.Title</strong></h4>
                 </div>
             </div>
             <div class="content">
