--- a/MyAppAspNet/Views/Shared/itemmenu.cshtml
+++ b/MyAppAspNet/Views/Shared/itemmenu.cshtml
@@ -1,5 +1,6 @@
-﻿@model IEnumerable<MyAppAspNet.Models.MenuApp>
-@if (Model = null)
+﻿@model MyAppAspNet.Models.MenuApp
+
+@if (Model == null)
 {
     <li class="nav-item has-treeview menu-close">
         <a href="#" class="nav-link ">
@@ -10,7 +11,7 @@
             </p>
         </a>
         <ul class="nav nav-treeview">
-            @for (int i = 0; i < 5; i++)
+            @foreach (var item in Model.)
             {
                 @Html.Partial("~/Views/Shared/itemmenu.cshtml")
             }
