--- a/MyAppAspNet/Views/Shared/_Template.cshtml
+++ b/MyAppAspNet/Views/Shared/_Template.cshtml
@@ -64,7 +64,7 @@
                         <img onerror="this.onerror=null;this.src='@Url.Content("~/Content/AdminLTE/dist/img/user.png")';" src="" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <span class="text-light"><strong>ID : </strong>190035 <br /><strong>Name : </strong>Admin</span>
+                        <span class="text-light"><strong>ID : </strong> <br /><strong>Name : </strong>@User.Identity.Name</span>
                     </div>
                 </div>
                 <nav class="mt-2">
