--- a/MyAppAspNet/Views/Shared/navmenu.cshtml
+++ b/MyAppAspNet/Views/Shared/navmenu.cshtml
@@ -1,9 +1,10 @@
 ﻿@model IEnumerable<MyAppAspNet.Models.MenuApp>
 
 
-@foreach (var item in Model.Where(a => a.IDParentMenu==null).ToList())
+@foreach (var item in Model)
 {
-    //var dict = new Dictionary<string, object>();
-    //dict["menus"] = Model;
-    @Html.Partial("~/Views/Shared/itemmenu.cshtml",item);
+    if (item.Role.UserRoles.Where(a => a.allow_view == true).Where(a => a.id_user == 16).FirstOrDefault() != null)
+    {
+        @Html.Partial("~/Views/Shared/itemmenu.cshtml", item);
+    }
 }
