--- a/MyAppAspNet/Views/Shared/itemmenu.cshtml
+++ b/MyAppAspNet/Views/Shared/itemmenu.cshtml
@@ -10,7 +10,7 @@
             </p>
         </a>
         <ul class="nav nav-treeview">
-            @foreach (var item in Model.MenuApp1)
+            @foreach (var item in Model.MenuApp1.OrderBy(a => a.OrderSort).ToList())
             {
               if (item.Roles.UserRole.Where(a => a.allow_view == true).Where(a => a.id_user == 16).FirstOrDefault() != null)
                  {
