--- a/MyAppAspNet/Views/appdashboard/masterdata/Group/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Group/Index.cshtml
@@ -13,16 +13,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.name)
+            Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.remark)
+            Note
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.created_at)
+            Create At
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.updated_at)
+            Updated At
         </th>
         <th></th>
     </tr>
