--- a/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/Edit.cshtml
+++ b/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyAppAspNet.Models.Groups
+﻿@model MyAppAspNet.Models.GroupLevel
 
 @{
     ViewBag.Title = "Edit";
@@ -17,20 +17,29 @@
         @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+            Group Master
             <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+                @Html.DropDownList("id_group", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.id_group, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.remark, htmlAttributes: new { @class = "control-label col-md-2" })
+            Parent
+            <div class="col-md-10">
+                @Html.DropDownList("id_parent", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.id_parent, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            Remark
             <div class="col-md-10">
                 @Html.EditorFor(model => model.remark, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.remark, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
