--- a/MyAppAspNet/Views/appdashboard/masterdata/Role/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Role/Index.cshtml
@@ -14,34 +14,34 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.name)
+               Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.note)
+                Note
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.url)
+                Url
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.controller)
+                Controller
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccessView)
+               View
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccessAdd)
+               Add
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccessEdit)
+               Edit
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccessDelete)
+               Delete
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccessPrint)
+               Print
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AccessCustom)
+               Custom
             </th>
             <th>Action</th>
         </tr>
