--- a/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/Delete.cshtml
+++ b/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/Delete.cshtml
@@ -1,24 +1,16 @@
-﻿@model MyAppAspNet.Models.Groups
+﻿@model MyAppAspNet.Models.GroupLevel
 
 @{
-    ViewBag.Title = "View";
+    ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
 
-<h2>View</h2>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.remark)
         </dt>
@@ -28,19 +20,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.created_at)
+            @Html.DisplayNameFor(model => model.GroupLevel2.remark)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.created_at)
+            @Html.DisplayFor(model => model.GroupLevel2.remark)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.updated_at)
+            @Html.DisplayNameFor(model => model.Groups.name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.updated_at)
+            @Html.DisplayFor(model => model.Groups.name)
         </dd>
 
     </dl>
