--- a/MyAppAspNet/Views/appdashboard/adminsystem/User/Add.cshtml
+++ b/MyAppAspNet/Views/appdashboard/adminsystem/User/Add.cshtml
@@ -1,18 +1,19 @@
 ﻿@model MyAppAspNet.Models.Users
 
 @{
-    ViewBag.Title = "Add Data";
+    ViewBag.Title = "Add";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
-<h2>Create</h2>
-@using (Html.BeginForm())
+
+<h2>Add</h2>
+
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
         <div class="form-group">
             @Html.LabelFor(model => model.userid, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -82,7 +83,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.PasswordFor(model => model.password, new { @class = "form-control", placeholder = "Password" })
+                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
             </div>
         </div>
