--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Delete.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Delete.cshtml
@@ -5,11 +5,8 @@
     Layout = "~/Views/Shared/_Template.cshtml";
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MenuApp</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -54,7 +51,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
