--- a/MyAppAspNet/Views/appdashboard/masterdata/Menu/Detail.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Menu/Detail.cshtml
@@ -1,15 +1,11 @@
 ﻿@model MyAppAspNet.Models.MenuApp
 
 @{
-    ViewBag.Title = "Detail";
+    ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Template.cshtml";
 }
 
-<h2>Detail</h2>
-
 <div>
-    <h4>MenuApp</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.MenuText)
