--- a/MyAppAspNet/Views/appdashboard/masterdata/Role/Detail.cshtml
+++ b/MyAppAspNet/Views/appdashboard/masterdata/Role/Detail.cshtml
@@ -8,11 +8,10 @@
 <h2>Detail</h2>
 
 <div>
-    <h4>Roles</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.name)
+            Name
         </dt>
 
         <dd>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.note)
+            Note
         </dt>
 
         <dd>
@@ -28,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.url)
+            Url
         </dt>
 
         <dd>
@@ -36,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.controller)
+            Controller
         </dt>
 
         <dd>
@@ -44,53 +43,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AccessView)
+            Have Access           
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.AccessView)
+            @Html.DisplayFor(model => model.AccessView) <span>View</span>
+            @Html.DisplayFor(model => model.AccessAdd) <span>Add</span>
+            @Html.DisplayFor(model => model.AccessEdit) <span>Edit</span>
+            @Html.DisplayFor(model => model.AccessDelete) <span>Delete</span>
+            @Html.DisplayFor(model => model.AccessPrint) <span>Print</span>
+            @Html.DisplayFor(model => model.AccessCustom) <span>Custom</span>
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessAdd)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessAdd)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessEdit)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessEdit)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessDelete)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessDelete)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessPrint)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessPrint)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccessCustom)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccessCustom)
-        </dd>
-
     </dl>
 </div>
 <p>
