--- a/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/Index.cshtml
+++ b/MyAppAspNet/Views/appdashboard/adminsystem/GroupLevel/Index.cshtml
@@ -37,6 +37,7 @@
             @Html.DisplayFor(modelItem => item.GroupLevel2.remark)
         </td>
         <td>
+            <a href="@Url.Action("Index", "RoleGroupLevel",new { idgroup = item.id })">Role</a> | 
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.id })
         </td>
